--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "antd": "^5.1.7",
+    "firebase": "^9.17.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^4.2.1",
+    "sass": "^1.58.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
